# deepspace

./: .gitignore  README.md  build.gradle.kts  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vspace/app/: App.kt
app/src/main/java/com/vspace/app/ui/: InstallActivity.kt  LauncherActivity.kt
app/src/main/java/com/vspace/app/utils/: DaemonService.kt
app/src/main/res/drawable/: ic_default_app.xml  ic_notification.xml
app/src/main/res/layout/: activity_install.xml  activity_launcher.xml  item_app.xml
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
engine/: build.gradle.kts
engine/src/main/java/com/vspace/engine/: VirtualCore.kt
engine/src/main/java/com/vspace/engine/hook/: AMSHook.kt  ActivityManagerProxy.kt  BinderHook.kt  HiddenApiBypass.kt  PMSHook.kt  PackageManagerProxy.kt  ServiceManagerHook.kt
engine/src/main/java/com/vspace/engine/ipc/: DaemonClient.kt  DaemonServer.kt  MemoryBridge.kt
engine/src/main/java/com/vspace/engine/model/: VirtualAppInfo.kt
engine/src/main/java/com/vspace/engine/pm/: LaunchConfig.kt  VPackageManager.kt
engine/src/main/java/com/vspace/engine/stub/: PluginContext.java  StubActivity.kt  StubActivity0.kt  StubActivity1.kt  StubActivity2.kt  StubActivity3.kt  StubActivity4.kt  StubActivity5.kt  StubActivity6.kt  StubActivity7.kt  StubActivity8.kt  StubActivity9.kt
engine/src/main/res/values/: strings.xml
native/: CMakeLists.txt
native/include/: hook.h  io_redirect.h  memory_bridge.h
native/src/: hook.cpp  io_redirect.cpp  main.cpp  memory_bridge.cpp  proc_virtual.cpp  su_stub.cpp
stub/: build.gradle.kts
stub/src/main/: AndroidManifest.xml
stub/src/main/java/com/vspace/stub/: StubApp.kt
